# agenda

./: .gitignore  .gitmodules  README.md  TODO.md  agenda.code-workspace  agenda.sqlite3  agenda_development.sqlite3  comix.rb  package.json  tsconfig.base.json
.github/workflows/: tauri.yml
apps/: scratchmonthly.json
apps/frontend/: .prettierrc.js  babel.config.js  capacitor.config.ts  index.html  package.json  vite.config.js
apps/frontend/ios/: Podfile
apps/frontend/public/: index.html
apps/frontend/src/: index.jsx  main.tsx  offline.ts  routeTree.gen.ts
apps/frontend/src/api/: api.js  planners.ts
apps/frontend/src/components/: EasyBlocksComponents.jsx  EasyBlocksEditor.jsx  EyeSlashIcon.jsx  PageNavigation.jsx  PowerOffIcon.jsx  TLDrawComponent.jsx  Tiptap.jsx  index.jsx  weekly.$weekId.tsx
apps/frontend/src/pages/: EasyBlocksPage.jsx  TiptapPage.jsx
apps/frontend/src/routes/: __root.tsx  about.tsx  daily.$date.tsx  index.tsx  monthly.$monthId.tsx  planners.$plannerId._index.tsx  planners.$plannerId.monthly.$monthId.tsx  planners.$plannerId.tsx  planners.$plannerId.weekly.$weekId.tsx  planners.tsx  tldraw.tsx  weekly.$weekId.tsx
apps/frontend/src/screens/: HomeScreen.jsx  PlannerScreen.jsx
apps/frontend/src/services/: api.js
apps/frontend/src/utils/: ipc.ts  (+2 more)
apps/frontend/windows/: agenda.sln
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/linux/: THIRDPARTY.txt  tauri_server
src-tauri/binaries/windows/: THIRDPARTY.txt
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tmp/cache/vite/: last-build-production.json
(+29 files in other folders)
